--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,3 +13,5 @@ add_executable(csapp ${SOURCE_FILES})
 add_executable(exec07 offer/ch02/exec07.cpp)
 add_executable(exec08 offer/ch02/exec08.cpp)
 add_executable(exec11 offer/ch02/exec11.cpp)
+add_executable(exec12 offer/ch02/exec12.cpp)
+add_executable(exec13 offer/ch02/exec13.cpp)
