算法竞赛入门经典： 3.4 习题

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,4 +21,4 @@ add_executable(main offer/ch04/main.cpp)
 add_executable(leetcode leetcode/easy/_709.cpp)
 add_executable(server csapp/lab/proxylab-handout/csapp.c csapp/lab/proxylab-handout/proxy.c)
 add_executable(algorithm leetcode/article/001/edit_distance.c)
-add_executable(match 算法竞赛入门经典/part03/3.3/3-6.cpp)
+add_executable(match 算法竞赛入门经典/part03/3.4/e/3-2.cpp)
