--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,4 +22,4 @@ add_executable(main offer/47.cpp)
 add_executable(leetcode leetcode/easy/_709.cpp)
 add_executable(server csapp/lab/proxylab-handout/csapp.c csapp/lab/proxylab-handout/proxy.c)
 add_executable(algorithm leetcode/article/001/edit_distance.c)
-add_executable(match 算法竞赛入门经典/part04/4.4/p/4-3.cpp)
+add_executable(match 挑战程序设计竞赛/02/2.2/2.2.4.1.cpp)
